syntax = "proto3";

package protofiles;
option go_package = "quiz-cli/api/protofiles/quizz";

service QuizService {
    rpc GetQuestions (Empty) returns (QuestionsResponse);
    rpc SaveResults (ResultsRequest) returns (ResultsResponse);
    rpc GetStatistics (ResultsRequest) returns (StatisticsResponse);
    rpc CreateQuestion (CreateQuestionRequest) returns (CreateQuestionResponse);
    rpc DeleteQuestion (DeleteQuestionRequest) returns (DeleteQuestionResponse);
}

message Empty {}

message Question {
    string id = 1;
    string question = 2;
    repeated string options = 3;
    string answer = 4;
}

message QuestionsResponse {
    repeated Question questions = 1;
}

message ResultsRequest {
    int32 correct_answers = 1;
    int32 total_questions = 2;
}

message ResultsResponse {
    string message = 1;
}

message StatisticsResponse {
    float percentage_better_than = 1;
}

message CreateQuestionRequest {
    Question question = 1;
}

message CreateQuestionResponse {
    string message = 1;
}

message DeleteQuestionRequest {
    string id = 1;
}

message DeleteQuestionResponse {
    string message = 1;
}

message ParticipantResult {
    int32 correct_answers = 1;
    int32 total_questions = 2;
}

message Result {
    repeated ParticipantResult participant_results = 1;
}